--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-contentful": "^4.0.0",
     "gatsby-source-filesystem": "^2.4.2",
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-typescript": "^2.6.0",
+    "node-sass": "^4.14.1",
     "prettier": "2.1.2",
     "typescript": "^4.0.5"
   },
