--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.3",
+    "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-contentful": "^4.0.0",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "postcss": "^8.1.9",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -30,8 +31,8 @@
     "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-typescript": "^2.6.0",
-    "node-sass": "^4.14.1",
     "prettier": "2.1.2",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.0.5"
   },
   "keywords": [
