--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "nozo",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@contentful/rich-text-types": "^14.1.2",
     "gatsby": "^2.25.3",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.4.21",
@@ -21,9 +22,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-syntax-highlighter": "^15.3.1"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
