--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.21.0",
     "gatsby": "^2.25.3",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.4.21",
